Finished data table

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="location">
-            <h1>
+        <div class="location" >
+            <h1 id="location">
                 Denver, CO
             </h1>
         </div>
@@ -45,26 +48,31 @@
         <table class="info-table">
             <tr>
                 <td class="query">Local Time:</td>
+                <td></td>
                 <td class="data">10:52</td>
             </tr>
 
             <tr>
                 <td class="query">Feels Like:</td>
+                <td></td>
                 <td class="data">80&degF</td>
             </tr>
 
             <tr>
                 <td class="query">Precipitation:</td>
+                <td></td>
                 <td class="data">12</td>
             </tr>
 
             <tr>
                 <td class="query">Wind Speed:</td>
+                <td></td>
                 <td class="data">2mph</td>
             </tr>
 
             <tr>
                 <td class="query">Humidity:</td>
+                <td></td>
                 <td class="data">3%</td>
             </tr>
         </table>
