Fixed search input reading // Made API key anonymous

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div id="clouds"></div>
 
-    <script src="./script.js" type="application/javascript"></script>
+    <script src="./script.mjs" type="module"></script>
     
 </body>
 </html>
