--- a/index.html
+++ b/index.html
@@ -96,8 +96,13 @@
         </div>
     </div>
 
-    <div id="clouds"></div>
+    <footer>
+        <div id="clouds"></div>
 
+        <div class="footer-div" id="footer-div">
+            <h4>© Jamal Wheeler 2023</h4>
+        </div>
+    </footer>
     <script src="./script.mjs" type="module"></script>
     
 </body>
