Readjusted title screen

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="search-form-wrapper">
         <form method="get" id="search-form">
-            <input type="search" name="location-search" id="location-search" placeholder="Please Enter a City Name" autocomplete="off">
+            <input type="search" name="location-search" id="location-search" placeholder="Search City" autocomplete="off">
             <button type="submit" id="search-button"></button>
         </form>
         <ul class="dropdown" id="dropdown">
